@@ -3,6 +3,10 @@ Changelog
 
 11.1.dev0 - (unreleased)
 ------------------------
+* Feature: added EEA Permalink Mapping object used for preserving
+  permalinking of datasets links after upgrade of versioning to the
+  version mapping
+  [ichim-david refs #72875]
 
 11.0 - (2016-06-02)
 -------------------
